[package]
name = "landscape"
version = "0.1.0"
authors = ["Maxim Goncharenko <kacejot@fex.net>"]
edition = "2018"

[lib]
name = "landscape"
path = "src/lib.rs"

[[bin]]
name = "landscape"
path = "src/main.rs"

[dependencies]
num="0.4.3"
rand="0.8.5"
image="0.25.2"
imgui = "0.12.0"
imgui-glium-renderer = "0.12.0"
glium = { version = "0.34.0", default-features = true }
imgui-winit-support = "0.12.0"

